feat(Ui): modified controller for UI, added last use case for connection towards image processor